--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "gutta-bar",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://gutta.bar",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -13,11 +12,13 @@
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://bragerosberg.github.io/gutta-bar",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
