--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://bragerosberg.github.io/gutta-bar",
+  "homepage": "https://gutta.bar",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
